--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
-  "name": "ripple",
+  "name": "ripple-emulator",
   "version": "0.9.15",
   "description": "A browser based html5 mobile application development and testing tool",
-  "homepage": "http://github.com/blackberry/Ripple-UI",
+  "homepage": "http://ripple.incubator.apache.org/",
   "author": {
-    "name": "Research In Motion",
-    "url": "http://github.com/blackberry/Ripple-UI"
+    "name": "Apache Ripple Community",
+    "url": "http://ripple.incubator.apache.org/"
   },
   "licenses": [{
     "type": "Apache 2.0",
     "url": "http://www.apache.org/licenses/LICENSE-2.0"
   }],
+  "repository": {
+    "type": "git",
+    "url": "https://git-wip-us.apache.org/repos/asf/icubator-ripple.git"
+  },
+  "keywords": [
+    "cordova",
+    "phonegap",
+    "ripple",
+    "mobile",
+    "testing",
+    "test",
+    "emulator"
+  ],
   "bin": { "ripple": "./bin/ripple" },
   "scripts": {"preinstall": "node thirdparty/ludicrous.js"},
   "main": "./lib/index",
