Update path arg to handle multiple paths
- added map to parser to make rules to map values from the commandline
- fixed problem in regex for enableripple (ignore case)
- added rule to always have path an array value
- updated jshint to get rid of onevar (we have grown)
- allow static server to take multiple paths and merge into one

--- a/.jshintrc
+++ b/.jshintrc
@@ -109,7 +109,7 @@
     "noarg": true,
     "noempty": false,
     "nonew": false,
-    "onevar": true,
+    "onevar": false,
     "plusplus": false,
     "regexp": false,
     "undef": true,
