Remove git submodule support by changing how Jasmine is pulled in.
It is the only git submodule, that provides no extra benefit as one.
This also makes the project not depend on git to run tests.

Issue Ref: https://issues.apache.org/jira/browse/RIPPLE-13

Since the latest Jasmine stable release does not play well being in
NPM's package.json, it can be installed nicely with bower.

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "html-minifier": "0.4.5",
     "jWorkflow": "0.x.x",
     "xmlhttprequest": "1.4.2",
-    "coverjs": "0.0.14"
+    "coverjs": "0.0.14",
+    "bower": "0.9.x"
   },
   "files": [
     "README.md",
