JSDom's current version is quite old.
Let's update it to a more recent version.

Tested with node 0.8.16 and 0.10.6.

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "connect": "2.3.6",
-    "jsdom": "0.2.14",
+    "jsdom": "0.6.x",
     "cssmin": "0.3.1",
     "html-minifier": "0.4.5",
     "jWorkflow": "0.x.x",
