--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "request": "2.12.0",
     "colors" : "0.6.0-1",
     "moment" : "1.x.x",
-    "accounting" : "0.x.x"
+    "accounting" : "0.x.x",
+    "open": "0.0.3"
   },
   "devDependencies": {
     "connect": "2.3.6",
