RIPPLE-77 Need to include DISCLAIMER and NOTICE files in package

--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
   },
   "files": [
     "README.md",
+    "DISCLAIMER",
     "LICENSE",
+    "NOTICE",
     "lib/index.js",
     "lib/server",
     "lib/cli",
