--- a/package.json
+++ b/package.json
@@ -27,23 +27,24 @@
   "bin": { "ripple": "./bin/ripple" },
   "main": "./lib/index",
   "dependencies": {
-    "express": "3.1.0",
+    "accounting": "0.x.x",
+    "colors": "0.6.0-1",
     "connect-xcors": "0.5.2",
-    "request": "2.12.0",
-    "colors" : "0.6.0-1",
-    "moment" : "1.x.x",
-    "accounting" : "0.x.x",
-    "open": "0.0.3"
+    "express": "3.1.0",
+    "moment": "1.x.x",
+    "open": "0.0.3",
+    "request": "2.12.0"
   },
   "devDependencies": {
+    "bower": "0.9.x",
     "connect": "2.3.6",
-    "jsdom": "0.6.x",
+    "coverjs": "0.0.14",
     "cssmin": "0.3.1",
     "html-minifier": "0.4.5",
+    "jsdom": "0.6.x",
     "jWorkflow": "0.x.x",
-    "xmlhttprequest": "1.4.2",
-    "coverjs": "0.0.14",
-    "bower": "0.9.x"
+    "semver": "^4.3.1",
+    "xmlhttprequest": "1.4.2"
   },
   "files": [
     "README.md",
