--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
     "request": "2.12.0"
   },
   "devDependencies": {
-    "bower": "0.9.x",
+    "bower": "1.3.12",
     "connect": "2.3.6",
     "coverjs": "0.0.14",
     "cssmin": "0.3.1",
     "html-minifier": "0.4.5",
-    "jsdom": "0.6.x",
+    "jsdom": "3.1.0",
     "jWorkflow": "0.x.x",
     "semver": "^4.3.1",
     "xmlhttprequest": "1.4.2"
