Adds 'jake rat' task to run Apache RAT, which verifies license headers in the project are valid (that is, license headers exist in all files that need them, and are recognized and of a type acceptable in an Apache project).

--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "jsdom": "3.1.0",
     "jWorkflow": "0.x.x",
     "semver": "^4.3.1",
-    "xmlhttprequest": "1.4.2"
+    "xmlhttprequest": "1.4.2",
+    "shelljs": "^0.4.0"
   },
   "files": [
     "README.md",
